# hitsplit

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  check.sh  rust-toolchain
.github/workflows/: rust.yml
src/: app.rs  lib.rs  main.rs  utils.rs
src/config/: config.rs  keybindings.rs  mod.rs  shortcut.rs
src/run/: category.rs  chrono.rs  game.rs  manager.rs  mod.rs  split.rs
src/settings/: columns.rs  config.rs  mod.rs  shortcut.rs
src/ui/: counter.rs  functions.rs  hitsplit.rs  mod.rs
src/ui/panels/: list.rs  mod.rs  settings.rs
