[package]
name = "hitsplit"
version = "0.1.0"
description = "HitSplit is a multiplatform tool for keeping track of your no-hit runs."
authors = ["Víctor Baena <vicbaeluq@gmail.com>"]
build = "build.rs"
edition = "2021"
rust-version = "1.76"

[dependencies]
egui = "0.26"
egui_extras = { version = "0.26", features = ["all_loaders"] }
global-hotkey = "0.4"
eframe = { version = "0.26", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
image = { version = "0.24", features = ["jpeg", "png"] }
log = "0.4"
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"]}
# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

# native:
env_logger = "0.11"
serde_json = "1"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2