[package]
name = "hitsplit"
version = "0.3.0"
description = "HitSplit is a multiplatform tool for keeping track of your no-hit runs."
authors = ["Víctor Baena <vicbaeluq@gmail.com>"]
build = "build.rs"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"

[dependencies]
egui = "0.27"
egui_extras = { version = "0.27", features = ["all_loaders"] }
egui_file = "0.17"
global-hotkey = "0.5"
eframe = { version = "0.27", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
image = { version = "0.24", features = ["jpeg", "png"] }
uuid = { version = "1", features = ["v4", "fast-rng"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
